force-app/main/default/objects/Resource_Allocation__c/Resource_Allocation__c.object-meta.xml
<CustomObject>
    <label>Resource Allocation</label>
    <nameField>
        <label>Resource Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>