force-app/main/default/objects/Resource_Allocation__c/fields/Required_Role__c.field-meta.xml
<CustomField>
    <fullName>Required_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Role</label>
    <referenceTo>Required_Role__c</referenceTo>
    <relationshipName>ResourcesInPojects</relationshipName>
    <type>Lookup</type>
</CustomField>