force-app/main/default/objects/Resource_Allocation__c/fields/RequiredRoles__c.field-meta.xml
<CustomField>
    <fullName>RequiredRoles__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequiredRoles</label>
    <referenceTo>Required_Role__c</referenceTo>
    <relationshipLabel>Resources Allocations</relationshipLabel>
    <relationshipName>ResourceAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>