force-app/main/default/objects/Resource_Allocation__c/fields/Resources__c.field-meta.xml
<CustomField>
    <fullName>Resources__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResourcesInPojects</relationshipName>
    <type>Lookup</type>
</CustomField>