force-app/main/default/objects/Resource_Allocation__c/fields/Sold_Roles__c.field-meta.xml
<CustomField>
    <fullName>Sold_Roles__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold Roles</label>
    <referenceTo>Required_Role__c</referenceTo>
    <relationshipName>ResourcesInPojects</relationshipName>
    <type>Lookup</type>
</CustomField>